--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,9 @@ web_modules/
 # Yarn Integrity file
 .yarn-integrity
 
+#Yarn Lock File
+yarn.lock
+
 # dotenv environment variable files
 .env
 .env.development.local
