--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
         "build:watch": "tsc && (concurrently \"tsc -w\" \"tsc-alias -w\")",
         "dev": "ts-node-dev --no-notify --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
-        "start": "npm run build && node --es-module-specifier-resolution=node ./dist/index.js"
+        "start": "npm run build && node --es-module-specifier-resolution=node ./dist/index.js",
+        "test": "jest --detectOpenHandles"
     },
     "keywords": [],
     "author": "",
@@ -32,10 +33,13 @@
     "devDependencies": {
         "@types/bcrypt": "^5.0.2",
         "@types/cors": "^2.8.17",
+        "@types/jest": "^29.5.11",
         "@types/jsonwebtoken": "^9.0.5",
         "@types/multer": "^1.4.11",
         "@types/node": "^20.10.4",
+        "jest": "^29.7.0",
         "prisma": "^5.7.0",
+        "ts-jest": "^29.1.1",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
         "tsc-alias": "^1.8.8",
