--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,11 @@
         "skipLibCheck": true,
         "paths": {
             "@root/*": ["./src/*"],
-        }
+        },
+        
+        "types": ["jest"],
+        "typeRoots": ["./node_modules/@types"]
+       
     },
     "include": ["src/**/*.ts"],
     "exclude": ["node_modules", "dist"],
